fixed layout bugs

--- a/core/static/core/less/tempora.less
+++ b/core/static/core/less/tempora.less
@@ -7,6 +7,7 @@ body {
     height: 100%;
     width: 100%;
 }
+
 body {
     .serif-font;
     display: flex;
@@ -16,11 +17,12 @@ body {
 
 .content {
     flex: 1 0 auto;
-	padding: 0 30px;
+
     @media (max-width: 767px) {
 		padding: 0 5px;
 	}
 }
+
 hr {
     &.light {
         border-color: white;
@@ -960,33 +962,23 @@ body {
 
 
 #books, .books, .projects {
-	img {
-		width: auto;
-		margin: auto;
-	}
-
-	.card-image {
-		img {
-			margin-left: 0;
-			margin-right: auto;
-		}
-	}
-
 	h4 {
-		margin: 10px 10px 5px;
+		margin-top: 20px;
+		margin-bottom: 10px;
 	}
 
 	h5 {
 		font-size: 16px;
 		font-weight: 400;
-		margin: 5px 10px;
+		margin-top: 10px;
+		margin-bottom: 5px;
 	}
 
 	h6 {
 		font-size: 18px;
 		font-weight: 600;
 		color: @theme-primary; 
-		margin: 5px 10px;
+		margin-top: 5px;
 	}
 
 	.book {
@@ -1222,10 +1214,23 @@ iframe {
 }
 
 .alert-top {
-	margin: 15px auto;
+	margin: 0 auto 30px;
 	max-width: 1200px;
 
 	.message {
 		padding: 15px 30px;
+
+		@media (max-width: 992px) {
+			padding: 0;
+		}
+	}
+}
+
+.view {
+	position: relative;
+	text-align: center;
+
+	img {
+		border: 2px solid #f6a4b2;
 	}
 }
